yamls/preview-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-preview
  labels:
    app: microservice-message
spec:
  ports:
    - port: 80
      targetPort: http
      nodePort: 30030
      protocol: TCP
      name: http
  selector:
    app: microservice-message
  type: NodePort
