yamls/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  labels:
    app: microservice-message
spec:
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: microservice-message
